[project]
name = "path-to-scan"
version = "0.1.0"
description = "Minimal 4-channel ALL-CNN-C training on scan-generated CIFAR-100 RAW/RGGB H5 data."
requires-python = ">=3.10"
dependencies = [
    "fire",
    "h5py",
    "numpy",
    "tqdm",
]

[project.optional-dependencies]
cuda = ["torch==2.10.0+cu128"]

[tool.uv]
package = false

[tool.uv.sources]
torch = { index = "pytorch-cu128" }

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
